--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,12 @@
     mapboxgl.accessToken = 'pk.eyJ1IjoiY2FzZXlsdW0iLCJhIjoiY2l6eXJ6dzV3MDMzMTJwcXFocThtNzNsbiJ9.pmpavQkzgLOo-I41M0PacA';
     var map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v10'
+    style: "mapbox://styles/mapbox/streets-v9",
+    center: [-122.3321, 47.6062], 
+    zoom: 2
+
+
+    
     });
     </script>
   <script src="index.js"></script>
