--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <img src="img/logo.png" alt="pursuit logo" height=200px>
+    <img src="./img/logo.png" alt="pursuit logo" height=200px>
     <form>
         From: <br>
         <input type = "text" name="pointa">
@@ -25,11 +25,11 @@
 
     <div id='map' style='width: 400px; height: 300px;'></div>
     <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiY2FzZXlsdW0iLCJhIjoiY2l6eXJ6dzV3MDMzMTJwcXFocThtNzNsbiJ9.pmpavQkzgLOo-I41M0PacA';
-    var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v10'
-    });
+        mapboxgl.accessToken = 'pk.eyJ1IjoiY2FzZXlsdW0iLCJhIjoiY2l6eXJ6dzV3MDMzMTJwcXFocThtNzNsbiJ9.pmpavQkzgLOo-I41M0PacA';
+        var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v10'
+        });
     </script>
   <script src="index.js"></script>
 </body>
