--- a/static/payment.html
+++ b/static/payment.html
@@ -15,8 +15,7 @@
 
 <body>
 
-
-    <div class="container">
+<h1>payment</h1>
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="#">
@@ -28,7 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Map </a>
+                <a class="nav-link" href="#">Map <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="music.html">Music</a>
@@ -40,6 +39,7 @@
             </ul>
           </div>
         </nav>
+  <div class="container">
     <!-- <img src="img/logo.png" alt="pursuit logo" height=200px> -->
     <form>
         From: <br>
@@ -50,15 +50,15 @@
         <button class="btn btn-success">Go!</button>
     </form>
 
-    <div id='map' style='width: 1110px; height: 500px;'></div>
+    <div id='map' style='width: 1000px; height: 500px;'></div>
   </div>
     <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiY2FzZXlsdW0iLCJhIjoiY2l6eXJ6dzV3MDMzMTJwcXFocThtNzNsbiJ9.pmpavQkzgLOo-I41M0PacA';
     var map = new mapboxgl.Map({
     container: 'map',
     style: "mapbox://styles/mapbox/streets-v9",
-    center: [ -100.977015, 38.662003],
-    zoom: 3
+    center: [-122.3321, 47.6062], 
+    zoom: 2
 
 
     
