--- a/static/index.html
+++ b/static/index.html
@@ -7,10 +7,11 @@
   <title>Pursuit</title>
   <meta name="description" content="Pursuit">
   <meta name="author" content="Pursuit">
-
   <script src='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="index.css" rel="stylesheet">
+
 </head>
 
 <body>
